# culturally_sensitive_agents

./: .env.example  .gitignore  pyproject.toml  readme.md
culturally_sensitive_agents/: cultural_orchestrator.py  hofstede.py  test_cultural_responses.py
culturally_sensitive_agents/character_files/: eliza.character.yaml
culturally_sensitive_agents/outputs/cultural_adaptation_study/: cultural_adaptation_results.yaml  research_summary.yaml
culturally_sensitive_agents/outputs/cultural_adaptation_study/character_adaptations/: brazil_character_adaptations.yaml  china_character_adaptations.yaml  india_character_adaptations.yaml  japan_character_adaptations.yaml  russia_character_adaptations.yaml  south_korea_character_adaptations.yaml  uae_character_adaptations.yaml  usa_character_adaptations.yaml
paper/: Makefile  culturally_sensitive_agents.md  culturally_sensitive_agents.tex
